# zipr

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  INSTALL  LICENSE  LICENSE.txt  Makefile  Makefile.in  README  README.md  README.p1  README.txt  SConscript  SConstruct  block_copy.c  build  build-all.sh  build.sh  build_diehard.sh  cfar_postgres_setup.sh  cfar_postgres_setup_for_other.sh  cgc_setup.sh  chopzero.c  clean-all.sh  clean_diehard.sh  cmd_args.005.cpp  compare.sh  configure  configure.in  copy_peasoup.sh  distclean.sh  do_concolic.sh  externals.conf  generate_exe.sh  get-peasoup-packages.sh  getsyms.sh  hanoi_overrun.c  hello.c  irdb_vars  (+31 more)
ELFIO-1.0.3/: ChangeLog  Makefile.am  Makefile.in  config.status  configure  configure.in  mkinstalldirs
ELFIO-1.0.3/ELFIO/: ELFI.h  ELFIDynamic.cpp  ELFIImpl.cpp  ELFIImpl.h  ELFINote.cpp  ELFIO.cpp  ELFIO.dsp  ELFIO.dsw  ELFIO.mcp  ELFIOUtils.cpp  ELFIRelocation.cpp  ELFISection.cpp  ELFISegment.cpp  ELFIStrings.cpp  ELFISymbols.cpp  ELFODynamic.cpp  ELFOImpl.cpp  ELFONote.cpp  ELFORelocation.cpp  ELFOSection.cpp  ELFOSegment.cpp  ELFOString.cpp  ELFOSymbols.cpp  Makefile.am  Makefile.in
ELFIO-1.0.3/Examples/: Makefile  Makefile.am  Makefile.in
ELFIO-1.0.3/Examples/ELFDump/: ELFDump.cpp  ELFDump.dsp  ELFDump.dsw  ELFDump.mcp  Makefile  Makefile.am  Makefile.in  out
ELFIO-1.0.3/Examples/RelocationTable/: Makefile  Makefile.am  Makefile.in  RelocationTable.cpp  RelocationTable.mcp
ELFIO-1.0.3/Examples/WriteObj/: Makefile  Makefile.am  Makefile.in  WriteObj.dsp  WriteObj.dsw  WriteObj.mcp
ELFIO-1.0.3/Examples/WriteObj2/: Makefile  Makefile.am  Makefile.in
ELFIO-1.0.3/Examples/Writer/: Makefile  Makefile.am  Makefile.in  Writer.dsp  Writer.dsw  Writer.mcp  test.elf
ELFIO-1.0.3/Examples/tutorial/: Makefile.am  Makefile.in  tutorial.cpp
ELFIO-1.0.3/doc/: Makefile  Makefile.am  Makefile.in  tutorial.docbook
add_lib/: SConscript  (+2 more)
appfw/: Makefile  Makefile.in  SConscript  SConstruct  TODO  configure  configure.in
appfw/src/: Makefile  Makefile.in  Makefile.mac  SConscript  SConscript.32  SConscript.64  SConstruct  appfw.c  appfw.cpp  appfw.h  appfw_ldap.c  appfw_ldap.h  hooker.c  mysql_hook.c  openldap_hook.c  osc_hook.c  osc_parse.cpp  oscfw.c  oscfw.h  pg_hook.c  sql_structure.cpp  sql_structure.h  sqlfw.c  sqlfw.h  sqlite3_hook.c  xq_hook.cpp  xq_parser.cpp  xqfw.c  xqfw.h
appfw/src/test/: Makefile  testpg2.c
appfw/test/: Makefile  testpg1.c  testpg2.c
appfw/test/postgres/: Makefile  postgres.test.sh  teardown.sql  testpg1.c  testpg2.c  testpg3.c
appfw/test/sqlite/: Makefile  setup.sql  sqlite.test.sh  testsqlite.c
appfw/tests/ldap/: Makefile  ldap.intercept.test.sh  testldapintercept.c  testldapintercept2.c  testldapintercept3.c  testldapintercept4.c
appfw/tests/ministry/: Makefile  httpparse.c  oscommand.c  spelldescription.c
appfw/tests/mysql/: Makefile  mysql.intercept.test.sh  runtest  test.pstmt.c  testfp.c  testintercept.c  testintercept.pstmt.c  testintercept2.c  testintercept3.c  testintercept4.c  testmysql.c  testtautology.c
appfw/tests/odbc/: Makefile  odbc_exec_direct.c  testodbc.c  testodbc.dlsym.c  testodbc.exe.sigs  testodbc.normal.c  testodbc.system.c  testodbc.system.dlsym.c
appfw/tests/oscommand/: Makefile  dotest.sh  testosc.c  testosc_exec_args.c  testosc_fp.c  testosc_intentional.c  testosc_normal.c  testosc_samesig.c  testosc_semi.c
appfw/tests/postgres/: Makefile  postgres.test.env.sh  postgres.test.sh  setup.sql  testpg.pstmt.c  testpg1.c  testpg1.env.c  testpg2.c  testpg2.env.c  testpg2.pstmt.c  testpg3.c  testpg4.c
appfw/tests/sqlite/: Makefile  runtest.sh  sqlite.lightpeasoup.test.sh  sqlite.test.sh  testsqlite.basic.c  testsqlite.c  testsqlite.pstmt.c  testsqlite.pstmt.fp.c
appfw/tests/standalone/: Makefile  fn.query.txt  goodquery  goodsigs  partialquery  partialsigs  query  s3.c  sigs  sigs2.REMOVED.git-id  sqlattackdetect.c  testfastdetect.c  testslowdetect.c  wp.all.fragments.txt.REMOVED.git-id  wp.all.uniq.sorted.fragments.REMOVED.git-id  wp.fragments.txt.REMOVED.git-id  wp.query.txt
arid_examples/html-xml-utils-3.0/: ChangeLog  Makefile  Makefile.am  Makefile.in  README  TODO  acinclude.m4  aclocal.m4  addid  asc2xml  asc2xml.1  cexport  cexport.1  cexport.c  cite  cite-mkbib  cite-mkbib.1  cite.1  class.e  config.h  config.h.in  config.status  configure  configure.in  connectsock.c  connectsock.e  count  count.1  count.c  dtd.c  dtd.e  dtd.hash  dynamic_ps.sh  errexit.c  extract  extract.c  genid.c  heap.c  html.e  html.h  (+60 more)
arid_examples/html-xml-utils-3.0/.deps/: addid.Po  asc2xml.Po  cexport.Po  cite.Po  class.Po  connectsock.Po  count.Po  dtd.Po  errexit.Po  extract.Po  genid.Po  hash.Po  heap.Po  html.Po  htmlclean.Po  htmlprune.Po  incl.Po  index.Po  mkbib.Po  multitoc.Po  normalize.Po  num.Po  openurl.Po  pipe.Po  scan.Po  selector.Po  textwrap.Po  toc.Po  tree.Po  types.Po  uncdata.Po  unent.Po  unpipe.Po  url.Po  wls.Po  xml2asc.Po  xmlns.Po  xref.Po  xselect.Po
arid_examples/html-xml-utils-3.0/autom4te.cache/: output.1  requests  traces.0  traces.1
arid_examples/html-xml-utils-3.0/testruns/: addid.c  asc2xml.c  cite.c  cite.e  class.c  config.h  errexit.e  export.h  extract.e  genid.e  hash.c  hash.e  heap.e  html.c  htmlclean.c  index.c  index.e  junk.c  multitoc.c  multitoc.e  normalize.c  openurl.c  openurl.e  scan.c  selector.e  strdup.c  strdup.e  strerror.c  strerror.e  strstr.e  test.html  textwrap.c  tfind.c  toc.e  types.c  types.e  uncdata.c  unent.c  unpipe.c  wls.c  (+2 more)
arid_examples/html-xml-utils-3.0/tmp/: arid.uva.logs.tar.gz.REMOVED.git-id  (+1 more)
callbacks/: configure  configure.in  configure_for_cgc
callbacks/example/: callback.c
callbacks/inferfn/: Makefile.in  infer.c  infer.h  infercallback.c
callbacks/lib/: Makefile.in  crt.s  tiny_linker_script
callbacks/libc/: Makefile.in
callbacks/p1/: Makefile.in  p1callbacks.c
callbacks/watchsyscall/: Makefile.in  wa_callbacks.c
cgc_callbacks/: Makefile.in  configure  configure.in
cgc_callbacks/example/: Makefile.in  callback.c
cgc_callbacks/lib/: Makefile.in  crt.s
(+6087 files in other folders)
