dnl Process this file with autoconf to produce a configure script.
AC_INIT(ELFIO)

AM_INIT_AUTOMAKE(ELFIO, 1.0.3)

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_RANLIB
AC_PROG_INSTALL

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT([Makefile
           ELFIO/Makefile
           Examples/Makefile
           Examples/ELFDump/Makefile
           Examples/RelocationTable/Makefile
           Examples/Writer/Makefile
           Examples/WriteObj/Makefile
           Examples/WriteObj2/Makefile
           Examples/tutorial/Makefile
           doc/Makefile])
