
AC_INIT(myconfig, version-0.1)

AC_PROG_CC

AC_ARG_ENABLE([debugging],              [  --enable-debugging                enable -g when compiling])

OPTIMIZE="-O3"
if test "$enable_debugging" = yes; then
        OPTIMIZE="-g "
fi

AC_SUBST(OPTIMIZE, $OPTIMIZE)

AC_OUTPUT(Makefile)
AC_OUTPUT(src/Makefile)
