lib_LIBRARIES = libELFIO.a

libELFIO_a_SOURCES = ELFIDynamic.cpp ELFIImpl.cpp ELFINote.cpp ELFIO.cpp \
    ELFIOUtils.cpp ELFIRelocation.cpp ELFISection.cpp \
    ELFISegment.cpp ELFIStrings.cpp ELFISymbols.cpp \
    ELFODynamic.cpp ELFOImpl.cpp ELFONote.cpp \
    ELFORelocation.cpp ELFOSection.cpp ELFOSegment.cpp \
    ELFOString.cpp ELFOSymbols.cpp

include_HEADERS = ELFI.h ELFIO.h ELFO.h ELFTypes.h
noinst_HEADERS  = ELFIImpl.h ELFOImpl.h ELFIOUtils.h

EXTRA_DIST = ELFIO.dsp ELFIO.dsw ELFIO.mcp