# Process this file with autoconf to produce a configure script.
AC_PREREQ(2.52)
AC_INIT
AM_INIT_AUTOMAKE(html-xml-utils, 3.0)
AM_CONFIG_HEADER(config.h)

# Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
# AC_PROG_LN_S
AC_PROG_AWK
AC_PROG_CPP
AM_PROG_LEX
AC_PROG_YACC
# AC_PROG_MAN2HTML

# Checks for libraries.
AC_SEARCH_LIBS(socket, socket nsl)
AC_SEARCH_LIBS(gethostbyname, socket nsl)

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h errno.h fcntl.h netdb.h netinet/in.h stddef.h stdlib.h string.h sys/socket.h unistd.h search.h machine/ansi.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T

# Checks for library functions.
# AC_FUNC_ERROR_AT_LINE
AC_FUNC_MALLOC
# AC_FUNC_REALLOC
AC_FUNC_STRERROR_R
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([gethostbyname memmove memset regcomp socket strcasecmp strchr strcspn strdup strerror strncasecmp strndup strrchr strspn strstr strtol])
AC_REPLACE_FUNCS(strdup strerror strstr tsearch tfind twalk)

# Optimization flags for flex
AC_FLEX_OPTIMIZE
AC_SUBST(lex_opt_flags)

AC_CONFIG_FILES([Makefile])
#AC_CONFIG_COMMANDS([default],[[echo timestamp > stamp-h]],[[]])
AC_OUTPUT
